# cog_twin

./: .gitignore  CONTEXT.md  changelog (13).md  changelog_claude.md  chat_memory.py  chat_parser_agnostic.py  cluster_schema.py  cog_twin.py  cog_twin_engine.py  cognitive_agent.py  cognitive_profiler.py  cognitive_twin.py  config.py  config.yaml  config_loader.py  debug_pipeline.py  dedup.py  doc_loader.py  embedder.py  enterprise_config.yaml.bak  enterprise_tenant.py  enterprise_twin.py  enterprise_voice.py  evolution_engine.py  fast_filter.py  frontend.md  heuristic_enricher.py  hybrid_search.py  ingest.py  init_sandbox.py  llm_tagger.py  memory_grep.py  memory_pipeline.py  metacognitive_mirror.py  model_adapter.py  pyproject.toml  read_traces.py  reasoning_trace.py  retrieval.py  schemas.py  (+8 more)
acidburn_pipeline/: __init__.py  acid_burn_stubbed.md  cluster_cpu.py  embed_gpu.py  embed_gpu_cloud.py  embed_gpu_cloud_v2.py  ingest.py  upload_to_b2.py
agents/: __init__.py  claude_orchestrator.py  consultation.py  diagnostic.py  holder_daemon.py  holders.py  orchestrator.py  persistence.py  promote_cli.py  reasoning.py  registry.py  sandbox_executor.py  schemas.py  swarm_orchestrator.py  test_diagnostic.py  test_sandbox_executor.py  test_swarm.py  tool_executor.py
agents/docs/: architecture.md
backend/app/: __init__.py  config.py  main.py
docs/: ENTERPRISE_FORK_WIRING.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/.svelte-kit/: ambient.d.ts
frontend/src/: app.css  app.html
scripts/: migrate_to_unified.py
(+48 files in other folders)
